# pySurf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
doc/: cad_test_geometries.md  four_sided_patch_design.md  structured_surface_mesher_plan.md
examples/annulus/: blocking.yaml
examples/cone_closed/: blocking.yaml
examples/cone_frustum/: blocking.yaml
examples/cone_open/: blocking.yaml
examples/cylinder/: blocking.yaml
examples/disk/: blocking.yaml
examples/elliptic_disk/: blocking.yaml
examples/rectangle/: blocking.yaml
examples/sphere/: blocking.yaml
pysurf/: __init__.py  blocks.py  cli.py
pysurf/assembly/: __init__.py  connectivity.py
pysurf/cad/: __init__.py  reader.py  step_scan.py
pysurf/geometry/: __init__.py  frames.py
pysurf/io/: __init__.py  json_writer.py  plot3d_writer.py  pyhyp_script.py  vtk_writer.py
pysurf/meshing/: __init__.py  annulus.py  cone.py  cylinder.py  disk_ogrid.py  edges.py  plane.py  quality.py  smoothing.py  sphere.py  tfi.py
pysurf/specs/: __init__.py  parser.py
step_files/: blocking.yaml  cylinder.STEP
tests/: test_cad_scan.py  test_connectivity.py  test_edge_spacing.py  test_io.py  test_orientation.py  test_presets.py  test_quality.py  test_spec_and_cli.py  test_tfi.py
